# confucius

./: Cargo.toml  README.md
benches/: benchmark.rs  criterion_bench.rs
examples/: basic_usage.rs  example_json.rs  example_toml.rs  example_with_includes.rs  example_yaml.rs  hierarchical_config.rs  validation_example.rs
src/: include.rs  lib.rs  parser.rs  utils.rs  validation.rs
src/formats/: ini.rs  json.rs  mod.rs  toml.rs  yaml.rs
tests/: config_tests.rs  integration_tests.rs
