[package]
name = "confucius"
version = "0.1.3-alpha"
edition = "2024"
authors = ["Matteo Kutufa <mk@mitocode.eu>"]
description = "A Rust library that simplifies configuration file management for applications."
license = "MIT"
readme = "README.md"
repository = "https://github.com/matteokutufa/confucius"
keywords = ["configuration", "ini", "toml", "yaml", "json"]
categories = ["config", "parser-implementations"]

[dependencies]
thiserror = "2.0.12"
glob = "0.3.0"
regex = "1.11.1"
home = "0.5.11"
path-clean = "1.0.1"
toml = "0.8.20"
serde_yaml = "0.9.34"
serde_json = "1.0.140"


[dev-dependencies]
tempfile = "3.3"      # Per i test con file temporanei
criterion = "0.4"     # Per i benchmark

[[bench]]
name = "criterion_bench"
harness = false





