[package]
name = "confucius"
version = "0.2.1"
edition = "2024"
authors = ["Matteo Kutufa <mk@mitocode.eu>"]
description = "A Rust library that simplifies configuration file management for applications."
license = "MIT"
readme = "README.md"
repository = "https://github.com/matteokutufa/confucius"
keywords = ["configuration", "ini", "toml", "yaml", "json"]
categories = ["config", "parser-implementations"]

[dependencies]
thiserror = "2.0.12"
glob = "0.3.0"
regex = "1.11.1"
home = "0.5.11"
path-clean = "1.0.1"
toml = "0.8.20"
serde_yaml = "0.9.34"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
tempfile = "3.19.1"      # Per i test con file temporanei
criterion = "0.5.1"     # Per i benchmark

[[bench]]
name = "criterion_bench"
harness = false





